# Corveon

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  NOTICE  README.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base.py  public_evidence.py  query_understanding.py  retrieval.py  state.py  task_planning.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routers/: __init__.py  _common.py  auth.py  chats.py  documents.py  evidence.py  health.py  jobs.py  medication.py  messages.py  org_sso.py  search.py
backend/app/api/schemas/: __init__.py  auth.py  chat.py  document.py  evidence.py  medication.py  message.py  search.py  sso.py
backend/app/core/: __init__.py  arq.py  config.py  errors.py  logging.py  metrics.py  middleware.py  redis.py  security.py  sentry.py  storage.py  token_denylist.py  tracing.py  validation.py
backend/app/data/: __init__.py  base.py  rls.py
backend/app/data/models/: __init__.py  audit_log.py  chat.py  chunk.py  document.py  evidence.py  job.py  medication.py  message.py  organization.py  sso.py  user.py
backend/app/data/repositories/: __init__.py  audit_log_repository.py  chat_repository.py  chunk_repository.py  document_repository.py  evidence_repository.py  job_repository.py  medication_repository.py  message_repository.py  sso_config_repository.py  user_repository.py
backend/app/data/vectorstore/: base.py  pgvector_store.py  qdrant_store.py  registry.py
backend/app/evidence/: __init__.py  _llm_json.py  analysis.py  cache.py  citation_verification.py  claim_extraction.py  registry.py  retrieval.py  scoring.py  verification_service.py
backend/app/evidence/connectors/: __init__.py  base.py  clinicaltrials.py  dailymed.py  mesh.py  openfda.py  pubmed.py  rxnorm.py
backend/app/export/: __init__.py  message_export.py
backend/app/ingestion/: __init__.py  chunking.py  embeddings.py  parsing.py
backend/app/medication/: __init__.py  _llm_json.py  analysis_service.py  cache.py  ddinter_loader.py  discrepancy.py  explanation_guardrail.py  interactions.py  normalizer.py  openfda_ddi_client.py  pip_loader.py  pip_screening.py  renal.py  rxnorm_client.py  snapshot_sync.py
backend/app/orchestrator/: __init__.py  chat_orchestrator.py
backend/app/providers/: __init__.py  anthropic.py  base.py  budget.py  gemini.py  health.py  metrics.py  ollama.py  openai.py  openai_compatible.py  openrouter.py  registry.py
backend/app/sso/: cache.py  crypto.py  oidc_client.py  service.py
backend/app/workers/: __init__.py  main.py  tasks.py
backend/migrations/: README.md  env.py
backend/migrations/versions/: 0001_baseline_organizations_and_users.py  0002_chats_with_rls.py  0003_messages_documents_chunks_jobs_with_rls.py  0004_audit_log.py  0005_evidence_verification_engine.py  0006_medication_safety_engine.py  0007_medication_renal_checks.py  0008_medication_pip_and_discrepancy.py  0009_enterprise_sso.py
backend/tests/: __init__.py  conftest.py  test_smoke.py
backend/tests/api/: test_auth_api.py  test_chats_api.py  test_documents_api.py  test_evidence_api.py  test_medication_api.py  test_messages_api.py  test_search_api.py  test_sso_api.py
backend/tests/database/: test_audit_log.py  test_chats_rls.py  test_ddinter_loader.py  test_documents_rls.py  test_evidence_rls.py  test_medication_interactions.py  test_medication_pip_screening.py  test_medication_rls.py  test_migrations.py  test_pip_loader.py  test_read_replica.py  test_reindex.py  test_snapshot_sync.py  test_sso_service.py
backend/tests/performance/: locustfile.py
backend/tests/security/: test_auth_security.py  test_chats_security.py  test_documents_security.py
backend/tests/unit/: test_chat_orchestrator.py  test_chunking.py  test_config.py  test_core_validation.py  test_embeddings.py  test_evidence_analysis.py  test_evidence_cache.py  test_evidence_citation_verification.py  test_evidence_claim_extraction.py  test_evidence_connectors_labels.py  test_evidence_connectors_literature.py  test_evidence_connectors_normalization.py  test_evidence_retrieval.py  test_evidence_scoring.py  test_evidence_verification_service.py  test_medication_discrepancy.py  test_medication_explanation_guardrail.py  test_medication_normalizer.py  test_medication_openfda_ddi_client.py  test_medication_renal.py  test_medication_rxnorm_client.py  test_message_export.py  test_parsing.py  test_provider_budget.py  test_provider_health.py  test_providers.py  test_security.py  test_sentry.py  test_sso_crypto.py  test_sso_oidc_client.py  test_vectorstore.py  test_worker_main.py
data/loaders/: README.md
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEBUGGING.md  DEPLOYMENT.md  DEVELOPER.md  ENVIRONMENT.md  ROADMAP.md  SECURITY.md  SETUP.md
docs/adr/: 0001-pgvector-over-qdrant.md  0002-alembic-forward-only-migrations.md  0003-custom-orchestrator-over-langgraph.md  0004-ddinter-over-rxnav-ddi.md  0005-dual-renal-equations.md  0006-provider-agnostic-plugin-registry.md  0007-sse-served-by-backend.md  0008-embedding-model-versioning.md  0009-name-corveon.md  0010-apache-2-0-license.md  0011-arq-over-celery.md  0012-frontend-auth-cookie-bff-proxy.md  0013-postgres-rls-requires-nonsuperuser-app-role.md  0014-local-disk-storage-fallback.md  0015-hnsw-index-via-raw-migration-ddl.md  0016-sse-stream-ticket-bridge.md  0017-evidence-cache-via-redis-not-postgres-table.md  0018-ddinter-loader-location-and-no-bundled-dataset.md  0019-pip-criteria-encoding.md  0020-guardrailed-explanation-narrative.md  0021-public-evidence-retrieval-agent.md  0022-qdrant-pluggable-vector-store.md  (+5 more)
frontend/: .prettierignore  README.md  eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  proxy.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
infra/: README.md  docker-compose.yml
(+94 files in other folders)
