# Corveon backend — packaging, dependencies, and tooling standards.
# Versions are pinned to lines resolved in the blueprint (§4). Application code
# is added incrementally per docs/ROADMAP.md.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# The distribution name (corveon-backend) does not match the importable
# package directory (app), so hatchling's default-file-selection heuristic
# cannot infer it. Point it at app/ explicitly.
packages = ["app"]

[project]
name = "corveon-backend"
version = "0.0.0"
description = "Corveon — provider-agnostic, evidence-grounded clinical intelligence platform (backend)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Corveon contributors" }]

dependencies = [
  # ── Web / API ─────────────────────────────────────────────
  "fastapi>=0.139,<0.140",
  "uvicorn[standard]>=0.34,<0.52",
  "gunicorn>=23",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.5,<3",
  "email-validator>=2.2",            # backs pydantic's EmailStr
  "python-multipart>=0.0.12",
  "sse-starlette>=2.1",              # SSE served by backend, not Vercel (§23.3)
  # ── Data / persistence ────────────────────────────────────
  "sqlalchemy[asyncio]>=2.0,<2.1",
  "asyncpg>=0.30",
  "alembic>=1.13,<2",
  "pgvector>=0.3",                  # Python bindings for pgvector types
  "redis>=5.0",
  "arq>=0.26",
  "qdrant-client>=1.10",            # optional vector-store alternative (ADR-0022)
  # ── Auth / security ───────────────────────────────────────
  "argon2-cffi>=23",
  "pyjwt>=2.9",
  "cryptography>=42",               # RS256 JWK verification + Fernet (ADR-0025)
  # ── Storage ───────────────────────────────────────────────
  "boto3>=1.35",                    # S3-compatible client for Cloudflare R2
  # ── Ingestion / embeddings / OCR ──────────────────────────
  "sentence-transformers>=3.0",     # bge-small-en / e5-small, 384-dim, local CPU
  "pymupdf>=1.24",
  "python-docx>=1.1",
  "python-pptx>=1.0",
  "pillow>=10.4",
  "pytesseract>=0.3.13",
  # ── Export ─────────────────────────────────────────────────
  "fpdf2>=2.8",
  # ── External medical APIs / HTTP ──────────────────────────
  "httpx>=0.27",
  # ── Observability ─────────────────────────────────────────
  "structlog>=24.4",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-exporter-otlp>=1.27",
  "prometheus-client>=0.21",
  "sentry-sdk>=2.14",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "testcontainers[postgres,redis]>=4.8",
  "schemathesis>=3.36",
  "locust>=2.31",
  "bandit>=1.7",
  "pip-audit>=2.7",
  "ruff>=0.6",
  "mypy>=1.11",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "ASYNC", "S", "RUF"]
# S101 (assert) is fine in tests; relaxed there below.
ignore = []

[tool.ruff.lint.per-file-ignores]
# S101 (assert) is idiomatic pytest. S105/S106/S107 (hardcoded-password
# heuristics) false-positive constantly on test fixtures/defaults that pass
# literal dummy secrets (e.g. JWT_SECRET_KEY="unit-test-secret...") to
# arguments whose *names* just happen to match the keyword list — not a real
# secret in any of these cases.
"tests/**" = ["S101", "S105", "S106", "S107"]
# S608 (SQL-injection-shaped f-string) false-positives here: `table` is always
# one of the fixed literals in _TABLES_WITH_CHAT_ID_RLS, never external input.
# A trailing `# noqa` cannot be placed on the line ruff reports without
# corrupting the multi-line triple-quoted SQL literal itself.
"migrations/versions/0003_messages_documents_chunks_jobs_with_rls.py" = ["S608"]
"migrations/versions/0005_evidence_verification_engine.py" = ["S608"]
"migrations/versions/0006_medication_safety_engine.py" = ["S608"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
disallow_untyped_defs = true
namespace_packages = true
mypy_path = "."

[[tool.mypy.overrides]]
# Neither ships inline types (py.typed) or a stub package we depend on;
# third-party, not our code to annotate.
module = [
  "fitz",
  "fitz.*",
  "boto3",
  "boto3.*",
  "botocore",
  "botocore.*",
  "pytesseract",
  "pytesseract.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=app --cov-report=term-missing"
markers = [
  "unit: fast, isolated logic (rules engine, routing policy)",
  "integration: requires Testcontainers (Postgres, Redis)",
  "api: API contract tests (schemathesis / httpx)",
  "database: migration up/down + RLS isolation invariants",
  "security: injection, upload-abuse, auth/RBAC",
  "golden: deterministic medication-rule golden tests against pinned snapshots",
]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
